Updated index.js, did some refactoring.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <title>Game of Throne Quiz</title>
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica" rel="stylesheet"> 
   <link rel="stylesheet" type="text/css" href="index.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script
+        src="https://code.jquery.com/jquery-3.2.1.js"
+        integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+        crossorigin="anonymous"></script>
 </head>
 <body>
   
@@ -58,7 +61,6 @@
     
   </main>
 
-  <script type="text/javascript" src="//code.jquery.com/jquery.min.js"></script>
   <script type="text/javascript" src="index.js"></script> 
 </body>
 </html>
