Updated css and html.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 
    <!--Intro opening button-->
       <div class="quiz-card">
-      <div class='txt-center'>
-        <h1>The Game of Thrones quiz</h1>
-        <img class ="intro-splash" src="./assets/got_intro02.jpg" width="350" height="195" alt="Game of Thrones intro image" />
+      <div class='txt-center'><h1>The Game of Thrones quiz</h1></div>
+      <div class="splash"><img class ="intro-splash" src="./assets/got_intro02.jpg" width="350" height="195" alt="Game of Thrones intro image" /></div>
         <p></p>
         <button class='' id='start-quiz'>Let The Game of Thrones begin!</button> <!--Button is hidden after quiz is initiated. Hide using 'hidden' class.-->
       </div>
