Refactored index.js, added feedback for wrong answer.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
           <button id='submit-answer' type="submit" data-popup-open="popup-feedback">Submit answer</button>
           </form>
    </section>
+   <section class="correct">
+     
+
+   </section>
 
       <!--Initiates modals-->
    <div class="popup" data-popup="popup-feedback">
