Refactored js for correct feedback on modal, added correct answer tracking.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
           <button id='submit-answer' type="submit" data-popup-open="popup-feedback">Submit answer</button>
           </form>
    </section>
-   <section class="correct">
-     
-
+   <section id='correctTrack' class='hidden'>
    </section>
 
       <!--Initiates modals-->
